--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ project(ppcm-firmware
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 set(CMAKE_C_EXTENSIONS ON)
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS ON)
 
@@ -91,8 +91,8 @@ target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE
         -Wno-register
         -ftemplate-backtrace-limit=0>
     $<$<CONFIG:Debug>: -g -O0 -g3 -ggdb>
-    $<$<CONFIG:Release>: -O3>
-    $<$<CONFIG:RelWithDebInfo>: -g -O1 -g3 -ggdb>)
+    $<$<CONFIG:Release>: -Os>
+    $<$<CONFIG:RelWithDebInfo>: -g -Os -g3 -ggdb>)
 
 # Linker options
 target_link_options(${CMAKE_PROJECT_NAME} PRIVATE
